--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,114 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  position: relative;
+  display: flex;
+  height: 100vh;
 }
+
+.App__body {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  background: linear-gradient(120deg, hsl(114, 100%, 4%) 12%, hsl(117, 91%, 27%) 88%);
+}
+
+.App__body__content {
+  padding: 1.5rem;
+  height: calc(100vh - 72px);
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  display: flex;
+  flex-direction: column-reverse;
+  
+}
+
+/*  hides scrollbar but keeps the functionality  */
+.App__body__content::-webkit-scrollbar {
+  display: none;
+}
+
+.App__body__content__r {
+  display: flex;
+  flex: 1;
+  height: fit-content;
+  padding-bottom: 10rem;
+}
+
+.App__body__content__tp {
+  position: relative;
+  height: fit-content;
+  top: 0;
+  background-color: hsla(0, 0%, 100%, 0.1);
+  border-radius: 1rem;
+}
+
+.App__body__MusicPlayerContainer {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  height: 7rem;
+  /* background: linear-gradient(120deg, rgb(255, 255, 255) 10%, #2a2a80); */
+  background: linear-gradient(to right, hsla(117, 92%, 36%, 0.75), hsla(243, 100%, 4%, 0.75));
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px);
+  animation: slideup 1s ease-in-out;
+}
+
+@keyframes slideup {
+  from {
+    opacity: 0;
+    transform: translateY(25%);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+
+@media screen and (min-width: 0px) {
+  
+}
+
+/*  sm  */
+@media screen and (min-width: 640px) {
+  
+}
+
+/*  md  */
+@media screen and (min-width: 768px) {
+  
+}
+
+/*  lg  */
+@media screen and (min-width: 1024px) {
+  
+}
+
+/* xl */
+@media screen and (min-width: 1280px) {
+  .App__body__content {
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  .App__body__content__tp {
+    position: sticky;
+  }
+}
+
+/*  2xl */
+@media screen and (min-width: 1536px) {
+  .App__body__content {
+    gap: 1.5rem;
+  }
+}
+
