--- a/src/components/Songbar/Songbar.css
+++ b/src/components/Songbar/Songbar.css
@@ -7,6 +7,7 @@
     cursor: pointer;
     margin-bottom: 0.5rem;
     width: 100%;
+    background-color: hsla(0, 0%, 100%, 0.1);
 }
 
 .Songbar:hover {
@@ -70,6 +71,6 @@
     color: black !important;
 }
 
-.--not-active {
+/* .--not-active {
     background-color: hsla(0, 0%, 100%, 0.1);
-}
+} */
