--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   -ms-overflow-style: none;
   display: flex;
   flex-direction: column-reverse;
-  
+  gap: 1rem;
 }
 
 /*  hides scrollbar but keeps the functionality  */
