Fixed a bug that would crash the app when trying to click on a related song when an object didn't have a artist property; added screenshots; updated README

--- a/src/components/DetailsHeader/DetailsHeader.css
+++ b/src/components/DetailsHeader/DetailsHeader.css
@@ -36,7 +36,8 @@
     color: white;
 }
 
-.DetailsHeader__Details__Item__Link {
+.DetailsHeader__Details__Item__Link,
+.DetailsHeader__Details__Item__Artist {
     display: block;
     text-decoration: none;
     color: hsl(0, 0%, 81%);
