made changes in Redux utils due to changes in Api; added TopSongs to display an artist's top songs; still have to update TopPlayed component

--- a/src/components/TopPlayed/TopPlayed.css
+++ b/src/components/TopPlayed/TopPlayed.css
@@ -102,7 +102,8 @@
     font-weight: bold;
 }
 
-.TopChartCard__Song__Links__Artist {
+.TopChartCard__Song__Links__Artist--Link,
+.TopChartCard__Song__Links__Artist--NonLink {
     color: hsl(0, 0%, 81%);
 }
 
