refactored some code to make it more readable/understandable; added ImageNotFound component for when specified images are not present

--- a/src/components/Songbar/Songbar.css
+++ b/src/components/Songbar/Songbar.css
@@ -32,7 +32,8 @@
     align-items: center;
 }
 
-.Songbar__SongDetails__Image {
+.Songbar__SongDetails__Image,
+.Songbar__SongDetails > img {
     width: 5rem;
     height: 5rem;
     border-radius: 1rem;
