--- a/src/components/TopPlayed/TopPlayed.css
+++ b/src/components/TopPlayed/TopPlayed.css
@@ -78,7 +78,8 @@
     justify-content: space-between;
 }
 
-.TopChartCard__Song__CoverArt {
+.TopChartCard__Song__CoverArt,
+.TopChartCard__Song > img {
     width: 5rem;
     height: 5rem;
     border-radius: 0.75rem;
@@ -122,6 +123,14 @@
 .TopPlayed__TopArtists__Swiper__SwiperSlide {
     width: 25% !important;
     height: auto !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.25rem;
+}
+
+.TopPlayed__TopArtists__Swiper__SwiperSlide > span {
+    color: hsl(0, 0%, 81%);
 }
 
 .TopPlayed__TopArtists__Swiper__SwiperSlide img {
